--- a/src/app/components/Central/home/home.component.html
+++ b/src/app/components/Central/home/home.component.html
@@ -1,12 +1,21 @@
-  <div class="container-fluid" style="width: 100%;">
-    <div class="row justify-content-center align-items-center">
-      <div class="card col-10 mt-3 row">
-        <div class="card col-5 m-2">
-          <h1>Noticias CPS</h1>
-        </div>
-        <div class="card col-5 m-2">
-          <h1>Relario de professores</h1>
-        </div>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+
+
+
+<div class="container-fluid" style="width: 100%;">
+  <div class="row justify-content-center align-items-center">
+    <div class="card col-10 mt-3 row">
+      <!--Caso nao aparecer o gráfico, entrem com npm install chart.js no console-->
+
+      <app-grafico alt="npm install chart.js"></app-grafico>
     </div>
   </div>
+</div>
