--- a/src/app/components/ComponentesVisuais/grafico/grafico.component.css
+++ b/src/app/components/ComponentesVisuais/grafico/grafico.component.css
@@ -1,4 +1,11 @@
-#myChart{
+#chartContainer{
+    display: flex;
+    justify-content: space-around;
+    height: 70vh;
+    width: 80vw;
+}
+
+#grafoProfessor #grafoCurso{
     width: 100px;
     height: 100px;
 }
