--- a/src/app/components/ComponentesVisuais/grafico/grafico.component.html
+++ b/src/app/components/ComponentesVisuais/grafico/grafico.component.html
@@ -1,5 +1,6 @@
-<div>
-    <canvas id="myChart"></canvas>
+<div id="chartContainer">
+    <canvas id="grafoProfessor"></canvas>
+ 
   </div>
   
   
