--- a/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
+++ b/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
@@ -22,21 +22,24 @@
 
                         <div class="empilhados">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="Presencial" id="modalidade1" (change)="onCheckboxChange($event, this.selectedModalidades)">
+                                <input class="form-check-input" type="checkbox" value="Presencial" id="modalidade1"
+                                    (change)="onCheckboxChange($event, this.selectedModalidades)">
                                 <label class="form-check-label" for="modalidade1">
                                     Presencial
                                 </label>
                             </div>
 
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="Hibrido" id="modalidade2" (change)="onCheckboxChange($event, this.selectedModalidades)">
+                                <input class="form-check-input" type="checkbox" value="Hibrido" id="modalidade2"
+                                    (change)="onCheckboxChange($event, this.selectedModalidades)">
                                 <label class="form-check-label" for="modalidade2">
                                     Híbrido
                                 </label>
                             </div>
 
-                            <div class="form-check">    
-                                <input class="form-check-input" type="checkbox" value="EAD" id="modalidade3" (change)="onCheckboxChange($event, this.selectedModalidades)">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="EAD" id="modalidade3"
+                                    (change)="onCheckboxChange($event, this.selectedModalidades)">
                                 <label class="form-check-label" for="modalidade3">
                                     EaD
                                 </label>
@@ -51,9 +54,10 @@
 
 
                     <div id="botoes" class="col-md-3 mb-2 d-flex justify-content-end">
-                        <button class="btn btn-primary me-2" (click)="filtraCurso(nome.value, coordenador.value, this.selectedModalidades)">Filtrar</button>
+                        <button class="btn btn-primary me-2"
+                            (click)="filtraCurso(nome.value, coordenador.value, this.selectedModalidades)">Filtrar</button>
                         <app-botao-imprimir></app-botao-imprimir>
-                    
+
                     </div>
                 </div>
             </div>
@@ -63,36 +67,37 @@
 
 
     <!--Tabela-->
-    <div class="card-body mt-3"  id="conteinerTabela">
-        <table id="tabela" class="table table-striped table-bordered text-center">
-            <thead class="table-dark">
-                <tr>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Sigla</th>
-                    <th scope="col">Código</th>
-                    <th scope="col">Coordenador</th>
-                    <th scope="col">Modalidade</th>
-                    <th scope="col" class="colunaOpcoes">Opções</th>
-                </tr>
-            </thead>
-            <tbody id="dadosTabela">
-                <tr *ngFor="let curso of cursos">
-                    <th scope="row">{{curso.nome}}</th>
-                    <td>{{curso.sigla}}</td>
-                    <td>{{curso.codCourse}}</td>
-                    <td>{{curso.coordenador}}</td>
-                    <td>{{curso.modalidade}}</td>
-                    <td class="colunaOpcoes">
-                        <br />
-                        <!-- <a class="colunaOpcoes" [routerLink]="['/tela-editar-professor', curso.nome]"
+    <div class="card-body mt-3" id="conteinerTabela">
+        <div class="table-responsive" style="max-height: 40vh;" id="conteinerTabela">
+            <table id="tabela" class="table table-striped table-bordered text-center">
+                <thead class="table-dark" style="position: sticky; top: 0;  z-index: 1;">
+                    <tr>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Sigla</th>
+                        <th scope="col">Código</th>
+                        <th scope="col">Coordenador</th>
+                        <th scope="col">Modalidade</th>
+                        <th scope="col" class="colunaOpcoes">Opções</th>
+                    </tr>
+                </thead>
+                <tbody id="dadosTabela">
+                    <tr *ngFor="let curso of cursos">
+                        <th scope="row">{{curso.nome}}</th>
+                        <td>{{curso.sigla}}</td>
+                        <td>{{curso.codCourse}}</td>
+                        <td>{{curso.coordenador}}</td>
+                        <td>{{curso.modalidade}}</td>
+                        <td class="colunaOpcoes">
+                            <br />
+                            <!-- <a class="colunaOpcoes" [routerLink]="['/tela-editar-professor', curso.nome]"
                             class="colunaOpcoes">📝</a> -->
-                        <a class="colunaOpcoes" (click)="openConfirmationModal(curso, true)">🗑️</a>
+                            <a class="colunaOpcoes" (click)="openConfirmationModal(curso, true)">🗑️</a>
 
-                    </td>
-                </tr>
-            </tbody>
-            
-        </table>
+                        </td>
+                    </tr>
+                </tbody>
 
+            </table>
+        </div>
     </div>
 </div>
