--- a/src/app/components/Central/tela-relatorio-professor/tela-relatorio-professor.component.html
+++ b/src/app/components/Central/tela-relatorio-professor/tela-relatorio-professor.component.html
@@ -2,7 +2,7 @@
 
 
     <!--Filtro-->
-    <div class="card mb-2 p-3" id="filtro">
+    <div class="card mb-2 p-3" style="max-height: 35vh;" id="filtro">
         <h5 class="mb-1">Filtrar Professores</h5>
         <main>
             <div id="conteiner" class="p-1">
@@ -66,9 +66,9 @@
 
 
     <!--Tabela-->
-    <div class="table-responsive" id="conteinerTabela">
+    <div class="table-responsive" style="max-height: 40vh;" id="conteinerTabela">
         <table id="tabela" class="table table-striped table-bordered text-center mb-4">
-            <thead class="table-dark">
+            <thead class="table-dark" style="position: sticky; top: 0;  z-index: 1;">
                 <tr>
                     <th scope="col">Nome Completo</th>
                     <th scope="col">E-mail</th>
