--- a/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
+++ b/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
@@ -46,7 +46,7 @@
           <div class="col-md-3">
             <label for="inputCodigoUESede" class="form-label">Código UE</label>
             <select id="inputCodigoUESede" class="form-select" required name="inputCodigoUESede" required #unidadeID>
-              <option disabled selected>Vai deixar o select no front ou consumir do back?</option>
+              <option disabled selected>Selecione</option>
               <option>Votorantim - 301</option>
               <option>Sorocaba - 123</option>
               <option>Tatuí - 900</option>
