--- a/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
+++ b/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
@@ -91,7 +91,7 @@
                             <br />
                             <!-- <a class="colunaOpcoes" [routerLink]="['/tela-editar-professor', curso.nome]"
                             class="colunaOpcoes">📝</a> -->
-                            <a class="colunaOpcoes" (click)="openConfirmationModal(curso, true)">🗑️</a>
+                            <a class="colunaOpcoes" id="lixeira" (click)="openConfirmationModal(curso, true)">🗑️</a>
 
                         </td>
                     </tr>
