--- a/src/app/components/Central/tela-relatorio-professor/tela-relatorio-professor.component.css
+++ b/src/app/components/Central/tela-relatorio-professor/tela-relatorio-professor.component.css
@@ -16,3 +16,11 @@ body{
 #topicos{
     justify-content: center;
 }
+
+.colunaOpcoes{
+    text-decoration: none;
+    
+    #lixeira{
+        cursor: pointer;
+    }
+}
