--- a/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.css
+++ b/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.css
@@ -6,6 +6,15 @@ body{
     background-color: #EDEDED;
 }
 
+.colunaOpcoes{
+    text-decoration: none;
+    
+
+    #lixeira{
+        cursor: pointer ;
+    }
+}
+
 @media print{
     #filtro, .colunaOpcoes{
         display: none;
