--- a/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
+++ b/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
@@ -9,7 +9,7 @@
           <div class="col-md-3">
             <label for="inputNome" class="form-label">Nome</label>
             <input type="text" class="form-control" id="inputNome" name="inputNome" [(ngModel)]="professor.nome" required />
-            <p id="validacaoNome" class="validacao">Somente letras são permitidas.</p>
+            <!-- <p id="validacaoNome" class="validacao">Somente letras são permitidas.</p> -->
           </div>
           <div class="col-md-3">
             <label for="inputEmail" class="form-label">E-mail</label>
@@ -27,7 +27,7 @@
           <div class="col-md-3">
             <label for="inputNumeroMatricula" class="form-label">Matrícula</label>
             <input type="number" class="form-control" id="inputNumeroMatricula" name="inputNumeroMatricula" [(ngModel)]="professor.matriculaId" disabled />
-            <p id="validacaoNome" class="validacao">Somente números são permitidos.</p>
+            <!-- <p id="validacaoNome" class="validacao">Somente números são permitidos.</p> -->
           </div>
           <div class="col-md-3">
             <label for="inputCodigoUESede" class="form-label">Código UE</label>
