--- a/src/app/components/Central/tela-relatorio-professor/tela-relatorio-professor.component.html
+++ b/src/app/components/Central/tela-relatorio-professor/tela-relatorio-professor.component.html
@@ -2,7 +2,7 @@
 
 
     <!--Filtro-->
-    <div class="card mb-2 p-3" style="max-height: 35vh;" id="filtro">
+    <div class="card mb-2 p-3"  id="filtro">
         <h5 class="mb-1">Filtrar Professores</h5>
         <main>
             <div id="conteiner" class="p-1">
