--- a/src/app/components/Central/home/home.component.html
+++ b/src/app/components/Central/home/home.component.html
@@ -11,11 +11,11 @@
 
 
 <div class="container-fluid" style="width: 100%;">
-  <div class="row justify-content-center align-items-center">
+  <main class="row justify-content-center align-items-center">
     <div class="card col-10 mt-3 row">
       <!--Caso nao aparecer o gráfico, entrem com npm install chart.js no console-->
 
       <app-grafico alt="npm install chart.js"></app-grafico>
     </div>
-  </div>
+  </main>
 </div>
