--- a/src/app/components/Central/tela-cadastro-curso/tela-cadastro-curso.component.html
+++ b/src/app/components/Central/tela-cadastro-curso/tela-cadastro-curso.component.html
@@ -45,7 +45,7 @@
               name="inputDisciplinas" placeholder="Digite as disciplinas que compõem o curso"></textarea>
           </div>
           <div class="col-12 text-center mt-2">
-            <button type="submit" class="btn btn-secondary" style="width: 15%">
+            <button type="submit" class="btn btn-secondary" style="width: fit-content">
               Cadastrar
             </button>
           </div>
