--- a/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
+++ b/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
@@ -82,7 +82,7 @@
             </select>
           </div>
           <div class="col-12 text-center mt-2">
-            <button type="submit" class="btn btn-secondary" style="width: fit-content">
+            <button type="submit" class="btn btn-secondary mb-5" style="width: fit-content">
               Cadastrar
             </button>
           </div>
