--- a/src/app/components/Central/home/home.component.html
+++ b/src/app/components/Central/home/home.component.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<div style="height: 85vh;">
+  <div class="container-fluid">
+    <main class="row justify-content-center">
+      <div class="card col-10 mt-4">
+        <!--Caso nao aparecer o gráfico, entrem com npm install chart.js no console-->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-
-
-
-<div class="container-fluid" style="width: 100%;">
-  <main class="row justify-content-center align-items-center">
-    <div class="card col-10 mt-3 row">
-      <!--Caso nao aparecer o gráfico, entrem com npm install chart.js no console-->
-
-      <app-grafico alt="npm install chart.js"></app-grafico>
-    </div>
-  </main>
+        <app-grafico alt="npm install chart.js"></app-grafico>
+      </div>
+    </main>
+  </div>
 </div>
