--- a/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
+++ b/src/app/components/Central/tela-relatorio-curso/tela-relatorio-curso.component.html
@@ -1,4 +1,4 @@
-<div class="container p-1 my-2">
+<div class="container p-1 my-2" style="height: 85vh;">
 
     <!--Filtro-->
     <div class="card mb-2 p-3" id="filtro">
@@ -55,7 +55,7 @@
 
                     <div id="botoes" class="col-md-3 mb-2 d-flex justify-content-end">
                         <button class="btn btn-primary me-2"
-                            (click)="filtraCurso(nome.value, coordenador.value, this.selectedModalidades)">Filtrar</button>
+                            (click)="filtraCurso(nome.value, coordenador.value, this.selectedModalidades)">Filtrar 🔍</button>
                         <app-botao-imprimir></app-botao-imprimir>
 
                     </div>
