--- a/src/app/components/ComponentesVisuais/botao-imprimir/botao-imprimir.component.html
+++ b/src/app/components/ComponentesVisuais/botao-imprimir/botao-imprimir.component.html
@@ -1,1 +1,1 @@
-<button class="fixed-button p-2 rounded" (click)="imprimir()">Imprimir</button>
+<button class="fixed-button p-2 rounded" (click)="imprimir()">Imprimir 🖨️</button>
