--- a/src/app/components/ComponentesVisuais/navbar/navbar.component.html
+++ b/src/app/components/ComponentesVisuais/navbar/navbar.component.html
@@ -20,13 +20,13 @@
                         Relatório
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end bg-body-secondary">
-                        <li><a class="dropdown-item" routerLink="/tela-relatorio-professor">Professor</a></li>
-                        <li><a class="dropdown-item" routerLink="/tela-relatorio-curso" href="#">Curso</a></li>
+                        <li><a class="dropdown-item" routerLink="/tela-relatorio-professor">Professores</a></li>
+                        <li><a class="dropdown-item" routerLink="/tela-relatorio-curso" href="#">Cursos</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown"  style="z-index: 500;">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Cadastrar
+                        Cadastro
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end bg-body-secondary">
                         <li><a class="dropdown-item" routerLink="/tela-cadastro-professor">Professor</a></li>
