--- a/src/app/components/Login/tela-login/tela-login.component.css
+++ b/src/app/components/Login/tela-login/tela-login.component.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%; /* Ajuste conforme necessário */
+    height: 100%;
   }
   
   @keyframes spin {
