--- a/src/app/components/Login/tela-login/tela-login.component.html
+++ b/src/app/components/Login/tela-login/tela-login.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" style="height: 100vh;">
     <div class="row">
-        <div class="col-md-6 offset-md-3 mt-2">
-            <div class="card">
+        <div class="col-md-6 offset-md-3 mt-4 ">
+            <div class="card mt-4">
                 <div class="card-header text-center">
                     <img class="img-fluid m-2" src="../../../assets/logoFatecCapi.png" alt="Logo fatec votorantim"
                         style="max-height: 90px;">
