--- a/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
+++ b/src/app/components/Central/tela-editar-professor/tela-editar-professor.component.html
@@ -1,6 +1,6 @@
-<main class="container mt-3">
+<main class="container mt-3" style="height: 85vh;">
   <div class="row justify-content-center">
-    <div class="col-lg-10">
+    <div class="card col-lg-10">
       <div class="form-container">
         <h2 class="text-center mb-2" style="font-weight: bold; font-size: 1.25rem;">
           Edição de Professor<br />Fatec Votorantim
@@ -64,7 +64,7 @@
               <option>Desativado</option>
             </select>
           </div>
-          <div class="col-12 text-center mt-2">
+          <div class="col-12 text-center mt-2 mb-5">
             <button type="submit" class="btn btn-secondary" style="width: 15%">
               Salvar
             </button>
