--- a/src/app/components/Central/tela-professor/tela-professor.component.html
+++ b/src/app/components/Central/tela-professor/tela-professor.component.html
@@ -1,4 +1,4 @@
-<main class="container mt-5">
+<main class="container mt-5" style="height: 75vh;">
   <div class="row justify-content-center">
     <div class="col-lg-10">
       <h2 class="text-center mb-4" style="font-weight: bold">
