--- a/src/app/components/Login/tela-cadastro-usuario/tela-cadastro-usuario.component.html
+++ b/src/app/components/Login/tela-cadastro-usuario/tela-cadastro-usuario.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" style="height: 100vh;">
     <div class="row">
-        <div class="col-md-7 offset-md-3 mt-3">
-            <div class="card">
+        <div class="col-md-8 offset-md-2 mt-4">
+            <div class="card mt-4">
                 <div class="row no-gutters m-2">
                     <div class="col-md-4 bg-light d-flex align-items-center justify-content-center">
                         <img class="img-fluid" src="../../../assets/logoFatecCapi.png" alt="Logo fatec votorantim" style="max-height: 90px; max-width: 100%; height: auto;">
