--- a/src/app/components/Login/tela-inicio/tela-inicio.component.html
+++ b/src/app/components/Login/tela-inicio/tela-inicio.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" style="height: 100vh;">
     <div class="row">
-      <div class="col-md-6 offset-md-3 mt-3">
-        <div class="card">
+      <div class="col-md-6 offset-md-3 mt-4">
+        <div class="card mt-4">
           <div class="card-header text-center">
             <img class="img-fluid" src="../../../assets/logoFatecCapi.png" alt="">
             <h3>Bem-vindo!</h3>
