--- a/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
+++ b/src/app/components/Central/tela-cadastro-professor/tela-cadastro-professor.component.html
@@ -35,7 +35,7 @@
               <option value="Especialista">Especialista</option>
               <option value="Mestre">Mestre</option>
               <option value="Doutor">Doutor</option>
-              <option value="Doutor">Pós-Doutorado</option>
+
             </select>
           </div>
           <div class="col-md-3">
@@ -48,9 +48,9 @@
             <label for="inputCodigoUESede" class="form-label">Código UE</label>
             <select id="inputCodigoUESede" class="form-select" required name="inputCodigoUESede" required #unidadeID>
               <option disabled selected>Selecione</option>
-              <option>Votorantim301</option>
-              <option>Sorocaba - 123</option>
-              <option>Tatuí - 900</option>
+              <option >301 - Votorantim</option>
+              <option >123 - Sorocaba</option>
+              <option>900 - Tatuí</option>
             </select>
           </div>
           <div class="col-md-3">
@@ -60,7 +60,7 @@
           </div>
           <div class="col-md-3">
             <label for="inputReferencia" class="form-label">Referência</label>
-            <input type="text" class="form-control" id="inputReferencia" placeholder="Ex: PES I - Grau A" name="inputReferencia" required #referencia />
+            <input type="text" class="form-control" id="inputReferencia" placeholder="Ex: PES I - A" name="inputReferencia" required #referencia />
           </div>
           <div class="col-md-3">
             <label for="inputNotes" class="form-label">Observações</label>
